<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#673AB7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:hint="@string/label_name"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edtAge"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:hint="@string/label_age"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_save" />
            <Button
                android:id="@+id/btnList"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_list" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#9C27B0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edtIdUser"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:hint="@string/label_id_user"
                android:inputType="number"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnFind"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_search" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>